crates/ui/tests/snapshots/panel_snapshots__live_screen__live_snapshot__ready_dark.snap
---
source: crates/ui/tests/panel_snapshots.rs
expression: "live_screen_summary(&c, ThemeMode::Dark)"
---
screen: Live
theme: dark
headline: Live
system_health_label: System health
equity_curve: ready points=2
kpi_strip: ready
  card Total return: 0.10%
  card CAGR: —
  card Sharpe: —
  card Max DD: 0.00%
  card Win rate: —
  card Trades: 0
session_caption: Session to date
llm_spend_label: LLM spend
llm_spend_tile: —
bottom_left: positions (state=loading)
bottom_right: agent_feed (state=loading)
